# bazel_rules_vivado

./: .bazelrc  .editorconfig  .gitignore  BUILD.bazel  GEMINI.md  MODULE.bazel  README.md  WORKSPACE  deps.bzl  doc.bzl  doc.md  go.mod  reproduce_panic.go
.bcr/: metadata.template.json
.github/workflows/: build.yml  publish-bcr.yml  publish.yml  tag-and-release.yml  test.yml
integration/: .bazelrc  MODULE.bazel  vhdl_ls.toml
integration/boards/: BUILD.bazel  alinx-a200t-b.xdc  basic.xdc
integration/ip/custom_ip/: BUILD.bazel  top.sv
integration/ip/ethernet/: BUILD.bazel  ethernet_top.vhd
integration/ip/generics/: BUILD.bazel  constraints.xdc  gen.pkg.vhdl  gen_inst.ent.vhdl  gen_test.ent.vhdl  spec.pkg.vhdl  tb.ent.vhdl  test.ent.vhdl
integration/ip/ila/: BUILD.bazel  ila_top.sv
integration/ip/ila_vhdl/: BUILD.bazel  ila_top_vhdl.vhd
integration/ip/test1/: BUILD.bazel  test.ent.vhdl
integration/ip/xdma_vhdl/: BUILD.bazel  xdma_top.vhd
integration/src/test1/: BUILD.bazel  constraints.xdc  tb.ent.vhdl
integration/xilinx/: BUILD.bazel
internal/: BUILD.bazel  defines.bzl  defines.md  providers.bzl  providers.md  vivado_extract.bzl  vivado_extract.md  vivado_generics.bzl  vivado_generics.md  vivado_gui.bzl  vivado_gui.md  vivado_gui.sh.tpl  vivado_ila.bzl  vivado_ila.md  vivado_ip.bzl  vivado_ip.md  vivado_ip.sh.tpl  vivado_library.bzl  vivado_library.md  vivado_place_and_route.bzl  vivado_place_and_route.md  vivado_place_and_route2.bzl  vivado_place_and_route2.md  vivado_program_device.bzl  vivado_program_device.md  vivado_program_flash.bzl  vivado_program_flash.md  vivado_project.bzl  vivado_project.md  vivado_read_ila.bzl  vivado_read_ila.md  vivado_repl.bzl  vivado_repl.md  vivado_repl.sh.tpl  vivado_simulation.bzl  vivado_simulation.md  vivado_synthesis.bzl  vivado_synthesis.md  vivado_synthesis2.bzl  vivado_synthesis2.md  (+8 more)
prerequisites/: BUILD.bazel  vivado_load_container.sh
