load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

gazelle_binary(
    name = "gazelle_bin",
    languages = DEFAULT_LANGUAGES + [
        "@bazel_skylib_gazelle_plugin//bzl",
    ],
)

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_bin",
)

buildifier(name = "buildifier")

bzl_library(
    name = "doc",
    srcs = ["doc.bzl"],
    visibility = ["//visibility:public"],
    deps = [],
)

stardoc(
    name = "md",
    out = "gen.doc.md",
    input = "doc.bzl",
    deps = [
        "//internal:defines",
        "//internal:providers",
    ],
)

write_source_files(
    name = "update",
    files = {
        "doc.md": "//:md",
    },
)
