module(
    name = "rules_vivado",
    version = "0.0.0",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_bid", version = "2.0.3")
bazel_dep(name = "gotopt2", version = "2.2.4")
# rules_go 0.59.0 are required for bazel 8.5.1 and up.
bazel_dep(name = "rules_go", version = "0.59.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.45.0")
bazel_dep(name = "fshlib", version = "0.2.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
