module(
    name = "rules_vivado",
    version = "0.0.0",
)


bazel_dep(name = "bazel_lib", version = "3.2.1", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.8.2", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")
bazel_dep(name = "fshlib", version = "0.2.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "gotopt2", version = "2.2.4")
bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "rules_bid", version = "2.1.1")
bazel_dep(name = "rules_go", version = "0.59.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "stardoc", version = "0.8.1")

