module(
    name = "rules_vivado",
    version = "0.0.0",
    bazel_compatibility = [">=8.0.0"],
)

bazel_dep(name = "bazel_lib", version = "3.3.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")

bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.9.0", dev_dependency = True)

bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2")
bazel_dep(name = "fshlib", version = "0.2.7")
bazel_dep(name = "gazelle", version = "0.51.3")
bazel_dep(name = "gotopt2", version = "2.8.3")
bazel_dep(name = "protobuf", version = "35.1")
bazel_dep(name = "rules_bid", version = "2.3.1")
bazel_dep(name = "rules_go", version = "0.61.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "stardoc", version = "0.8.1")
