load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

package(default_visibility = ["//visibility:public"])

exports_files(["vivado_repl.sh.tpl"])

bzl_library(
    name = "defines",
    srcs = ["defines.bzl"],
    deps = ["@rules_bid//build:rules"],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
)

bzl_library(
    name = "vivado_project",
    srcs = ["vivado_project.bzl"],
    deps = [
        ":defines",
        ":providers",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "vivado_synthesis",
    srcs = ["vivado_synthesis.bzl"],
    deps = [
        ":defines",
        ":providers",
    ],
)

bzl_library(
    name = "vivado_synthesis2",
    srcs = ["vivado_synthesis2.bzl"],
    deps = [
        ":defines",
        ":providers",
    ],
)

bzl_library(
    name = "vivado_place_and_route",
    srcs = ["vivado_place_and_route.bzl"],
    deps = [
        ":defines",
        ":providers",
    ],
)

bzl_library(
    name = "vivado_place_and_route2",
    srcs = ["vivado_place_and_route2.bzl"],
    deps = [
        ":defines",
        ":providers",
    ],
)

bzl_library(
    name = "vivado_program_device",
    srcs = ["vivado_program_device.bzl"],
    deps = [
        ":providers",
    ],
)

bzl_library(
    name = "vivado_library",
    srcs = ["vivado_library.bzl"],
    deps = [
        ":defines",
        ":providers",
    ],
)

bzl_library(
    name = "vivado_simulation",
    srcs = ["vivado_simulation.bzl"],
    deps = [
        ":defines",
        ":providers",
    ],
)

bzl_library(
    name = "vivado_unisims_library",
    srcs = ["vivado_unisims_library.bzl"],
    deps = [
        ":defines",
        ":providers",
    ],
)

bzl_library(
    name = "vivado_generics",
    srcs = ["vivado_generics.bzl"],
)

bzl_library(
    name = "vivado_repl",
    srcs = ["vivado_repl.bzl"],
    deps = [
        ":defines",
    ],
)

stardoc(
    name = "md_defines",
    out = "gen.defines.md",
    input = "defines.bzl",
    deps = [":defines"],
)

stardoc(
    name = "md_providers",
    out = "gen.providers.md",
    input = "providers.bzl",
    deps = [":providers"],
)

stardoc(
    name = "md_vivado_repl",
    out = "gen.vivado_repl.md",
    input = "vivado_repl.bzl",
    deps = [":vivado_repl"],
)

write_source_files(
    name = "update",
    files = {
        "defines.md": ":md_defines",
        "providers.md": ":md_providers",
        "vivado_repl.md": ":md_vivado_repl",
    },
)
