load(
    "@rules_vivado//build/vivado:rules.bzl",
    "vivado_generics",
    "vivado_library",
    "vivado_library_transition",
    "vivado_place_and_route",
    "vivado_place_and_route2",
    "vivado_program_device",
    "vivado_simulation",
    "vivado_test",

    # Version2
    "vivado_synthesis2",
)


filegroup(
    name = "srcs",
    # do not sort
    srcs = [
        "test.ent.vhdl",
        "tb.ent.vhdl",
    ],
    tags = [
        "vhdl_ls",
        "vhdl_ls_lib_test1",
    ],
)


vivado_library(
    name = "test1",
    srcs = [":srcs"],
)



vivado_synthesis2(
    name = "synth",
    srcs = [
        ":srcs",
    ],
    xdcs = [
        "//boards:constraints_basic",
    ],
    part = "xc7a200tfbg484-2",
    top = "test",
)


vivado_place_and_route2(
    name = "pnr",
    synthesis =  ":synth",
)


vivado_simulation(
    name = "sim",
    #config = "cfg_tb",
    library = ":test1",
    top = "tb",
)

vivado_test(
    name = "test",
    library = ":test1",
    top = "tb",
)


# Example of transitioning the test1 library to the VHDL-2019 standard.
# The year "2019" is a full year number which translates to "--2019" for xvhdl.
vivado_library_transition(
    name = "test1_2019",
    library = ":test1",
    standard = "2019",
)

vivado_simulation(
    name = "sim_2019",
    library = ":test1_2019",
    top = "tb",
)

vivado_test(
    name = "test_2019",
    library = ":test1_2019",
    top = "tb",
)

